[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubera-api"
version = "0.1.0"
description = "Modern Python client for the Kubera Data API v3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rob"},
]
keywords = ["kubera", "api", "client", "portfolio", "wealth-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
kubera = "kubera.cli:cli"

[project.urls]
Homepage = "https://github.com/the-mace/kubera-python-api"
Documentation = "https://github.com/the-mace/kubera-python-api#readme"
Repository = "https://github.com/the-mace/kubera-python-api"
Issues = "https://github.com/the-mace/kubera-python-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["kubera"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
